# bevy_simple_stat_bars

./: Cargo.toml  README.md
bevy_status_bars/: Cargo.toml
examples/: chase.rs  draw.rs  manual_update.rs  observer.rs
src/: builder.rs  bundles.rs  chase.rs  components.rs  despawn.rs  display.rs  lib.rs  observers.rs
src/render/: mod.rs
