[package]
name = "stat_bars"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "2d", "graphics", "sprites"]
categories = ["game-development"]
repository = "https://github.com/ickshonpe/stat_bars"
description = "library for drawing health bars etc above sprites"

[dependencies]
bevy = "0.7"

